--- a/clarusway/css/login-style.css
+++ b/clarusway/css/login-style.css
@@ -8,8 +8,7 @@
 body { margin: auto;
   font-family: "Roboto", sans-serif;
   text-align: center;
-  background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20200714/pngtree-modern-double-color-futuristic-neon-background-image_351866.jpg); background-repeat: no-repeat ;
-background-position: center center; background-attachment: fixed; background-size: cover;
+  background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20200714/pngtree-modern-double-color-futuristic-neon-background-image_351866.jpg);
 }
 
 h1 {
